jpa-language/src/main/java/com/kn/language/parser/antlr/jpa/JpaParser.java
// Generated from Jpa.g4 by ANTLR 4.5.3
package com.kn.language.parser.antlr.jpa;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JpaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, IDENTIFICATION_VARIABLE=78, CHARACTER=79, 
		STRINGLITERAL=80, ESCAPE_CHARACTER=81, WS=82, TRIM_CHARACTER=83, INT_NUMERAL=84;
	public static final int
		RULE_ql_statement = 0, RULE_select_statement = 1, RULE_update_statement = 2, 
		RULE_delete_statement = 3, RULE_from_clause = 4, RULE_identification_variable_declaration = 5, 
		RULE_range_variable_declaration = 6, RULE_join = 7, RULE_fetch_join = 8, 
		RULE_join_spec = 9, RULE_join_association_path_expression = 10, RULE_join_collection_valued_path_expression = 11, 
		RULE_join_single_valued_association_path_expression = 12, RULE_collection_member_declaration = 13, 
		RULE_single_valued_path_expression = 14, RULE_state_field_path_expression = 15, 
		RULE_single_valued_association_path_expression = 16, RULE_collection_valued_path_expression = 17, 
		RULE_state_field = 18, RULE_update_clause = 19, RULE_update_item = 20, 
		RULE_new_value = 21, RULE_delete_clause = 22, RULE_select_clause = 23, 
		RULE_select_expression = 24, RULE_constructor_expression = 25, RULE_constructor_item = 26, 
		RULE_aggregate_expression = 27, RULE_where_clause = 28, RULE_groupby_clause = 29, 
		RULE_groupby_item = 30, RULE_having_clause = 31, RULE_orderby_clause = 32, 
		RULE_orderby_item = 33, RULE_subquery = 34, RULE_subquery_from_clause = 35, 
		RULE_subselect_identification_variable_declaration = 36, RULE_association_path_expression = 37, 
		RULE_simple_select_clause = 38, RULE_simple_select_expression = 39, RULE_conditional_expression = 40, 
		RULE_conditional_term = 41, RULE_conditional_factor = 42, RULE_conditional_primary = 43, 
		RULE_simple_cond_expression = 44, RULE_between_expression = 45, RULE_in_expression = 46, 
		RULE_in_item = 47, RULE_like_expression = 48, RULE_null_comparison_expression = 49, 
		RULE_empty_collection_comparison_expression = 50, RULE_collection_member_expression = 51, 
		RULE_exists_expression = 52, RULE_all_or_any_expression = 53, RULE_comparison_expression = 54, 
		RULE_comparison_operator = 55, RULE_arithmetic_expression = 56, RULE_simple_arithmetic_expression = 57, 
		RULE_arithmetic_term = 58, RULE_arithmetic_factor = 59, RULE_arithmetic_primary = 60, 
		RULE_string_expression = 61, RULE_string_primary = 62, RULE_datetime_expression = 63, 
		RULE_datetime_primary = 64, RULE_boolean_expression = 65, RULE_boolean_primary = 66, 
		RULE_enum_expression = 67, RULE_enum_primary = 68, RULE_entity_expression = 69, 
		RULE_simple_entity_expression = 70, RULE_functions_returning_numerics = 71, 
		RULE_functions_returning_datetime = 72, RULE_functions_returning_strings = 73, 
		RULE_trim_specification = 74, RULE_numeric_literal = 75, RULE_pattern_value = 76, 
		RULE_input_parameter = 77, RULE_literal = 78, RULE_constructor_name = 79, 
		RULE_enum_literal = 80, RULE_boolean_literal = 81, RULE_simple_state_field = 82, 
		RULE_embedded_class_state_field = 83, RULE_single_valued_association_field = 84, 
		RULE_collection_valued_association_field = 85, RULE_abstract_schema_name = 86;
	public static final String[] ruleNames = {
		"ql_statement", "select_statement", "update_statement", "delete_statement", 
		"from_clause", "identification_variable_declaration", "range_variable_declaration", 
		"join", "fetch_join", "join_spec", "join_association_path_expression", 
		"join_collection_valued_path_expression", "join_single_valued_association_path_expression", 
		"collection_member_declaration", "single_valued_path_expression", "state_field_path_expression", 
		"single_valued_association_path_expression", "collection_valued_path_expression", 
		"state_field", "update_clause", "update_item", "new_value", "delete_clause", 
		"select_clause", "select_expression", "constructor_expression", "constructor_item", 
		"aggregate_expression", "where_clause", "groupby_clause", "groupby_item", 
		"having_clause", "orderby_clause", "orderby_item", "subquery", "subquery_from_clause", 
		"subselect_identification_variable_declaration", "association_path_expression", 
		"simple_select_clause", "simple_select_expression", "conditional_expression", 
		"conditional_term", "conditional_factor", "conditional_primary", "simple_cond_expression", 
		"between_expression", "in_expression", "in_item", "like_expression", "null_comparison_expression", 
		"empty_collection_comparison_expression", "collection_member_expression", 
		"exists_expression", "all_or_any_expression", "comparison_expression", 
		"comparison_operator", "arithmetic_expression", "simple_arithmetic_expression", 
		"arithmetic_term", "arithmetic_factor", "arithmetic_primary", "string_expression", 
		"string_primary", "datetime_expression", "datetime_primary", "boolean_expression", 
		"boolean_primary", "enum_expression", "enum_primary", "entity_expression", 
		"simple_entity_expression", "functions_returning_numerics", "functions_returning_datetime", 
		"functions_returning_strings", "trim_specification", "numeric_literal", 
		"pattern_value", "input_parameter", "literal", "constructor_name", "enum_literal", 
		"boolean_literal", "simple_state_field", "embedded_class_state_field", 
		"single_valued_association_field", "collection_valued_association_field", 
		"abstract_schema_name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'FROM'", "','", "'AS'", "'FETCH'", "'LEFT'", "'OUTER'", "'INNER'", 
		"'JOIN'", "'.'", "'IN'", "'('", "')'", "'UPDATE'", "'SET'", "'='", "'NULL'", 
		"'DELETE'", "'SELECT'", "'DISTINCT'", "'OBJECT'", "'NEW'", "'AVG'", "'MAX'", 
		"'MIN'", "'SUM'", "'COUNT'", "'WHERE'", "'GROUP'", "'BY'", "'HAVING'", 
		"'ORDER'", "'ASC'", "'DESC'", "'OR'", "'AND'", "'NOT'", "'BETWEEN'", "'LIKE'", 
		"'ESCAPE'", "'IS'", "'EMPTY'", "'MEMBER'", "'OF'", "'EXISTS'", "'ALL'", 
		"'ANY'", "'SOME'", "'<>'", "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", 
		"'*'", "'/'", "'LENGTH'", "'LOCATE'", "'ABS'", "'SQRT'", "'MOD'", "'SIZE'", 
		"'CURRENT_DATE'", "'CURRENT_TIME'", "'CURRENT_TIMESTAMP'", "'CONCAT'", 
		"'SUBSTRING'", "'TRIM'", "'LOWER'", "'UPPER'", "'LEADING'", "'TRAILING'", 
		"'BOTH'", "'?'", "':'", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "IDENTIFICATION_VARIABLE", "CHARACTER", 
		"STRINGLITERAL", "ESCAPE_CHARACTER", "WS", "TRIM_CHARACTER", "INT_NUMERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jpa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JpaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Ql_statementContext extends ParserRuleContext {
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public Update_statementContext update_statement() {
			return getRuleContext(Update_statementContext.class,0);
		}
		public Delete_statementContext delete_statement() {
			return getRuleContext(Delete_statementContext.class,0);
		}
		public Ql_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ql_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).enterQl_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).exitQl_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JpaVisitor ) return ((JpaVisitor<? extends T>)visitor).visitQl_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ql_statementContext ql_statement() throws RecognitionException {
		Ql_statementContext _localctx = new Ql_statementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ql_statement);
		try {
			setState(177);
			switch (_input.LA(1)) {
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				select_statement();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				update_statement();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 3);
				{
				setState(176);
				delete_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_statementContext extends ParserRuleContext {
		public Select_clauseContext select_clause() {
			return getRuleContext(Select_clauseContext.class,0);
		}
		public From_clauseContext from_clause() {
			return getRuleContext(From_clauseContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Groupby_clauseContext groupby_clause() {
			return getRuleContext(Groupby_clauseContext.class,0);
		}
		public Having_clauseContext having_clause() {
			return getRuleContext(Having_clauseContext.class,0);
		}
		public Orderby_clauseContext orderby_clause() {
			return getRuleContext(Orderby_clauseContext.class,0);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).enterSelect_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).exitSelect_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JpaVisitor ) return ((JpaVisitor<? extends T>)visitor).visitSelect_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_statementContext select_statement() throws RecognitionException {
		Select_statementContext _localctx = new Select_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			select_clause();
			setState(180);
			from_clause();
			setState(182);
			_la = _input.LA(1);
			if (_la==T__26) {
				{
				setState(181);
				where_clause();
				}
			}

			setState(185);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(184);
				groupby_clause();
				}
			}

			setState(188);
			_la = _input.LA(1);
			if (_la==T__29) {
				{
				setState(187);
				having_clause();
				}
			}

			setState(191);
			_la = _input.LA(1);
			if (_la==T__30) {
				{
				setState(190);
				orderby_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Update_statementContext extends ParserRuleContext {
		public Update_clauseContext update_clause() {
			return getRuleContext(Update_clauseContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Update_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_update_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).enterUpdate_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).exitUpdate_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JpaVisitor ) return ((JpaVisitor<? extends T>)visitor).visitUpdate_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Update_statementContext update_statement() throws RecognitionException {
		Update_statementContext _localctx = new Update_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_update_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			update_clause();
			setState(195);
			_la = _input.LA(1);
			if (_la==T__26) {
				{
				setState(194);
				where_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Delete_statementContext extends ParserRuleContext {
		public Delete_clauseContext delete_clause() {
			return getRuleContext(Delete_clauseContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Delete_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).enterDelete_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).exitDelete_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JpaVisitor ) return ((JpaVisitor<? extends T>)visitor).visitDelete_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Delete_statementContext delete_statement() throws RecognitionException {
		Delete_statementContext _localctx = new Delete_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_delete_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			delete_clause();
			setState(199);
			_la = _input.LA(1);
			if (_la==T__26) {
				{
				setState(198);
				where_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class From_clauseContext extends ParserRuleContext {
		public List<Identification_variable_declarationContext> identification_variable_declaration() {
			return getRuleContexts(Identification_variable_declarationContext.class);
		}
		public Identification_variable_declarationContext identification_variable_declaration(int i) {
			return getRuleContext(Identification_variable_declarationContext.class,i);
		}
		public List<Collection_member_declarationContext> collection_member_declaration() {
			return getRuleContexts(Collection_member_declarationContext.class);
		}
		public Collection_member_declarationContext collection_member_declaration(int i) {
			return getRuleContext(Collection_member_declarationContext.class,i);
		}
		public From_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).enterFrom_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).exitFrom_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JpaVisitor ) return ((JpaVisitor<? extends T>)visitor).visitFrom_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final From_clauseContext from_clause() throws RecognitionException {
		From_clauseContext _localctx = new From_clauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_from_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			match(T__0);
			setState(202);
			identification_variable_declaration();
			setState(210);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(203);
				match(T__1);
				setState(206);
				switch (_input.LA(1)) {
				case T__2:
				case IDENTIFICATION_VARIABLE:
					{
					setState(204);
					identification_variable_declaration();
					}
					break;
				case T__9:
					{
					setState(205);
					collection_member_declaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(212);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Identification_variable_declarationContext extends ParserRuleContext {
		public Range_variable_declarationContext range_variable_declaration() {
			return getRuleContext(Range_variable_declarationContext.class,0);
		}
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public List<Fetch_joinContext> fetch_join() {
			return getRuleContexts(Fetch_joinContext.class);
		}
		public Fetch_joinContext fetch_join(int i) {
			return getRuleContext(Fetch_joinContext.class,i);
		}
		public Identification_variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identification_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).enterIdentification_variable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JpaListener ) ((JpaListener)listener).exitIdentification_variable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JpaVisitor ) return ((JpaVisitor<? extends T>)visitor).visitIdentification_variable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identification_variable_declarationContext identification_variable_declaration() throws RecognitionException {
		Identification_variable_declarationContext _localctx = new Identification_variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identification_variable_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			range_variable_declaration();
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__7))) != 0)) {
				{
				setState(216);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(214);
					join();
					}
					break;
				case 2:
					{
					setState(215);
					fetch_join();
					}
					break;
				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
